--- a/personal_website/about.html
+++ b/personal_website/about.html
@@ -45,8 +45,8 @@
         <div class="container">
             <ul>
                 <li><a href="https://github.com/lenni991"><i class="icon ion-social-github"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/mohamed-soliman-877236209/"><i class="icon ion-social-linkedin"></i></a></li>
-                <li><a href="https://twitter.com/lenni911_"><i class="icon ion-social-twitter"></i></a></li>
+                <li><a href=""><i class="icon ion-social-linkedin"></i></a></li>
+                <li><a href=""><i class="icon ion-social-twitter"></i></a></li>
             </ul>
         </div>
     </footer>
